attached_assets/Pasted-root-vps63691-var-www-contencioso-npm-install-esbuild-s_1768392931985.txt
root@vps63691:/var/www/contencioso# npm install esbuild --save-dev

up to date, audited 445 packages in 2s

57 packages are looking for funding
  run `npm fund` for details

9 vulnerabilities (3 low, 5 high, 1 critical)

To address issues that do not require attention, run:
  npm audit fix

To address all issues possible (including breaking changes), run:
  npm audit fix --force

Some issues need review, and may require choosing
a different dependency.

Run `npm audit` for details.
root@vps63691:/var/www/contencioso# npm run build

> rest-express@1.0.0 build
> tsx script/build.ts


node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error [ERR_MODULE_NOT_FOUND]: Cannot find package 'esbuild' imported from /var/www/contencioso/script/build.ts
    at packageResolve (node:internal/modules/esm/resolve:873:9)
    at moduleResolve (node:internal/modules/esm/resolve:946:18)
    at defaultResolve (node:internal/modules/esm/resolve:1188:11)
    at nextResolve (node:internal/modules/esm/hooks:864:28)
    at resolveBase (file:///usr/lib/node_modules/tsx/dist/esm/index.mjs?1768392872143:2:3744)
    at resolveDirectory (file:///usr/lib/node_modules/tsx/dist/esm/index.mjs?1768392872143:2:4243)
    at resolveTsPaths (file:///usr/lib/node_modules/tsx/dist/esm/index.mjs?1768392872143:2:4984)
    at async resolve (file:///usr/lib/node_modules/tsx/dist/esm/index.mjs?1768392872143:2:5355)
    at async nextResolve (node:internal/modules/esm/hooks:864:22)
    at async Hooks.resolve (node:internal/modules/esm/hooks:306:24) {
  code: 'ERR_MODULE_NOT_FOUND'
}

Node.js v20.20.0
root@vps63691:/var/www/contencioso# npm run build

> rest-express@1.0.0 build
> tsx script/build.ts


node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error [ERR_MODULE_NOT_FOUND]: Cannot find package 'esbuild' imported from /var/www/contencioso/script/build.ts
    at packageResolve (node:internal/modules/esm/resolve:873:9)
    at moduleResolve (node:internal/modules/esm/resolve:946:18)
    at defaultResolve (node:internal/modules/esm/resolve:1188:11)
    at nextResolve (node:internal/modules/esm/hooks:864:28)
    at resolveBase (file:///usr/lib/node_modules/tsx/dist/esm/index.mjs?1768392882703:2:3744)
    at resolveDirectory (file:///usr/lib/node_modules/tsx/dist/esm/index.mjs?1768392882703:2:4243)
    at resolveTsPaths (file:///usr/lib/node_modules/tsx/dist/esm/index.mjs?1768392882703:2:4984)
    at async resolve (file:///usr/lib/node_modules/tsx/dist/esm/index.mjs?1768392882703:2:5355)
    at async nextResolve (node:internal/modules/esm/hooks:864:22)
    at async Hooks.resolve (node:internal/modules/esm/hooks:306:24) {
  code: 'ERR_MODULE_NOT_FOUND'
}

Node.js v20.20.0
root@vps63691:/var/www/contencioso# pm2 delete contencioso
export $(cat .env | xargs)
pm2 start npm --name "contencioso" -- run start
pm2 save
[PM2] Applying action deleteProcessId on app [contencioso](ids: [ 0 ])
[PM2] [contencioso](0) ✓
┌────┬────────────────────┬──────────┬──────┬───────────┬──────────┬──────────┐
│ id │ name               │ mode     │ ↺    │ status    │ cpu      │ memory   │
└────┴────────────────────┴──────────┴──────┴───────────┴──────────┴──────────┘
[PM2] Starting /usr/bin/npm in fork_mode (1 instance)
[PM2] Done.
┌────┬────────────────────┬──────────┬──────┬───────────┬──────────┬──────────┐
│ id │ name               │ mode     │ ↺    │ status    │ cpu      │ memory   │
├────┼────────────────────┼──────────┼──────┼───────────┼──────────┼──────────┤
│ 0  │ contencioso        │ fork     │ 0    │ online    │ 0%       │ 12.0mb   │
└────┴────────────────────┴──────────┴──────┴───────────┴──────────┴──────────┘
[PM2] Saving current process list...
[PM2] Successfully saved in /root/.pm2/dump.pm2
root@vps63691:/var/www/contencioso# pm2 logs contencioso --lines 10
[TAILING] Tailing last 10 lines for [contencioso] process (change the value with --lines option)
/root/.pm2/logs/contencioso-error.log last 10 lines:
0|contenci |   },
0|contenci |   [Symbol(kType)]: 'error',
0|contenci |   [Symbol(kError)]: AggregateError [ECONNREFUSED]:
0|contenci |       at internalConnectMultiple (node:net:1122:18)
0|contenci |       at afterConnectMultiple (node:net:1689:7) {
0|contenci |     code: 'ECONNREFUSED',
0|contenci |     [errors]: [ [Error], [Error] ]
0|contenci |   },
0|contenci |   [Symbol(kMessage)]: ''
0|contenci | }

/root/.pm2/logs/contencioso-out.log last 10 lines:
0|contenci | Sistema iniciado sem dados pré-carregados
0|contenci | 9:12:58 AM [express] serving on port 5000
0|contenci | 9:13:03 AM [express] GET /api/auth/user 401 in 3ms :: {"message":"Unauthorized"}
0|contenci | 9:13:08 AM [express] POST /api/login 500 in 10ms :: {"error":"Erro no servidor"}
0|contenci |
0|contenci | > rest-express@1.0.0 start
0|contenci | > NODE_ENV=production node dist/index.cjs
0|contenci |
0|contenci | Sistema iniciado sem dados pré-carregados
0|contenci | 9:15:13 AM [express] serving on port 5000

0|contencioso  | 9:15:19 AM [express] GET /api/auth/user 401 in 3ms :: {"message":"Unauthorized"}
0|contencioso  | Login error: ul {
0|contencioso  |   [Symbol(kTarget)]: n {
0|contencioso  |     _events: [Object: null prototype] {
0|contencioso  |       error: [Function],
0|contencioso  |       message: [Function],
0|contencioso  |       close: [Function],
0|contencioso  |       open: [Function]
0|contencioso  |     },
0|contencioso  |     _eventsCount: 4,
0|contencioso  |     _maxListeners: undefined,
0|contencioso  |     _binaryType: 'arraybuffer',
0|contencioso  |     _closeCode: 1006,
0|contencioso  |     _closeFrameReceived: false,
0|contencioso  |     _closeFrameSent: false,
0|contencioso  |     _closeMessage: <Buffer >,
0|contencioso  |     _closeTimer: null,
0|contencioso  |     _errorEmitted: true,
0|contencioso  |     _extensions: {},
0|contencioso  |     _paused: false,
0|contencioso  |     _protocol: '',
0|contencioso  |     _readyState: 3,
0|contencioso  |     _receiver: null,
0|contencioso  |     _sender: null,
0|contencioso  |     _socket: null,
0|contencioso  |     _bufferedAmount: 0,
0|contencioso  |     _isServer: false,
0|contencioso  |     _redirects: 0,
0|contencioso  |     _autoPong: true,
0|contencioso  |     _url: 'wss://localhost/v2',
0|contencioso  |     _req: null,
0|contencioso  |     [Symbol(shapeMode)]: false,
0|contencioso  |     [Symbol(kCapture)]: false
0|contencioso  |   },
0|contencioso  |   [Symbol(kType)]: 'error',
0|contencioso  |   [Symbol(kError)]: AggregateError [ECONNREFUSED]:
0|contencioso  |       at internalConnectMultiple (node:net:1122:18)
0|contencioso  |       at afterConnectMultiple (node:net:1689:7) {
0|contencioso  |     code: 'ECONNREFUSED',
0|contencioso  |     [errors]: [ [Error], [Error] ]
0|contencioso  |   },
0|contencioso  |   [Symbol(kMessage)]: ''
0|contencioso  | }
0|contencioso  | 9:15:22 AM [express] POST /api/login 500 in 9ms :: {"error":"Erro no servidor"}